Fix map overflow

--- a/style/home.css
+++ b/style/home.css
@@ -36,7 +36,7 @@
 	margin-bottom: 2vh;
 }
 #map {
-	width: 100vw;
+	width: 100%;
 	height: 40vh;
 }
 /*@media all and (orientation: portrait) {
